refactor: replace double-checked locking with @PostConstruct in ModuleCatalogService